Fix max height on small down media queries

--- a/app/assets/stylesheets/conductor/home.scss
+++ b/app/assets/stylesheets/conductor/home.scss
@@ -11,7 +11,9 @@ span#allocated_users_length {
     padding: 0px 5px;
 }
 
-.fixed-top .navbar-collapse {
-  max-height: 340px;
-  overflow-y: auto;
+@include media-breakpoint-down(sm) {
+  .fixed-top .navbar-collapse {
+    max-height: 340px;
+    overflow-y: auto;
+  }
 }
